<resources>
    <string name="app_name">AutoMeter</string>
    <string name="google_api_key">AIzaSyBHucdaFlZ7zteLZxu4ChvT8EklEPjmH4c</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="owner_name">Owner name</string>
    <string name="diver_name">Diver Name</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="licence_numner">Licence Numner</string>
    <string name="done">done</string>
    <string name="fill_all_details">Please fill all data</string>
    <string name="unique_auto_number">Unique Auto Number</string>
    <string name="meter_company">Mechanical Taxi Meter Counter</string>
    <string name="meter_maker">Super Meter</string>
</resources>
