<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rh.msu.autometer.ui.activity.AddDriverDetailsActivity">

    <EditText
        android:id="@+id/edtxt_owner_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/owner_name" />

    <EditText
        android:id="@+id/edtxt_driver_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtxt_owner_name"
        android:layout_margin="8dp"
        android:text="@string/diver_name" />

    <EditText
        android:id="@+id/edtxt_vehicle_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtxt_driver_name"
        android:layout_margin="8dp"
        android:text="@string/vehicle_number" />

    <EditText
        android:id="@+id/edtxt_driver_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/edtxt_vehicle_number"
        android:text="@string/mobile_number" />

    <EditText
        android:id="@+id/edtxt_licence_number"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtxt_driver_number"
        android:text="@string/licence_numner" />


</RelativeLayout>
